--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
     "**/bin/**": true,
     "**/obj/**": true,
     "**/TestResults/**": true
-  }
+  },
+  "github.copilot.chat.experimental.tools.enabled": true
 }
