--- a/HexGrid.Lib/HexGrid.Lib.csproj
+++ b/HexGrid.Lib/HexGrid.Lib.csproj
@@ -2,8 +2,22 @@
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    
+    <!-- Package Configuration -->
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <IsPackable>true</IsPackable>
+    <Title>HexGrid Library</Title>
+    <PackageId>HexGrid.Lib</PackageId>
+    
+    <!-- Documentation -->
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);CS1591</NoWarn> <!-- Suppress missing XML comment warnings -->
   </PropertyGroup>
+
+  <!-- Include README in package -->
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    <None Include="..\docs\CHANGELOG.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 
 </Project>
