--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-﻿# GitHub Actions CI/CD Workflow for HexGrid
+# GitHub Actions CI/CD Workflow for HexGrid
 # This workflow builds the solution, runs tests, generates coverage reports, and publishes test results
 
 name: CI/CD Pipeline
@@ -34,7 +34,7 @@ jobs:
   build-and-test:
     name: Build and Test
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
@@ -209,12 +209,16 @@ jobs:
         path: ./packages/*.nupkg
         retention-days: 90
 
+    outputs:
+      semver: ${{ steps.gitversion.outputs.semVer }}
+      nuget_version: ${{ steps.gitversion.outputs.nuGetVersion }}
+
   quality-gate:
     name: Quality Gate
     runs-on: ubuntu-latest
     needs: build-and-test
     if: success()
-    
+
     steps:
     - name: Download Coverage Report
       uses: actions/download-artifact@v4
@@ -226,17 +230,17 @@ jobs:
       run: |
         echo "Quality Gate Checks"
         echo "==================="
-        
+
         # Parse coverage from Summary.txt
         if [ -f "./CoverageReport/Summary.txt" ]; then
           cat "./CoverageReport/Summary.txt"
-          
+
           # Example: Extract line coverage percentage
           if grep -q "Line coverage:" "./CoverageReport/Summary.txt"; then
             COVERAGE=$(grep "Line coverage:" "./CoverageReport/Summary.txt" | grep -oP '\d+\.?\d*%' | head -1 | tr -d '%')
             echo ""
             echo "Line Coverage: ${COVERAGE}%"
-            
+
             # Optional: Fail if coverage is below threshold
             # if (( $(echo "$COVERAGE < 60" | bc -l) )); then
             #     echo "Coverage is below 60% threshold!"
@@ -244,6 +248,108 @@ jobs:
             # fi
           fi
         fi
-        
+
         echo ""
         echo " Quality gate passed!"
+
+  auto-tag:
+    name: Create Version Tag
+    runs-on: ubuntu-latest
+    needs: [build-and-test, quality-gate]
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    permissions:
+      contents: write
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v3.0.0
+      with:
+        versionSpec: '6.x'
+
+    - name: Determine Version
+      id: gitversion
+      uses: gittools/actions/gitversion/execute@v3.0.0
+      with:
+        useConfigFile: true
+        configFilePath: GitVersion.yml
+
+    - name: Check if Tag Exists
+      id: check_tag
+      run: |
+        TAG="v${{ steps.gitversion.outputs.semVer }}"
+        if git rev-parse "$TAG" >/dev/null 2>&1; then
+          echo "exists=true" >> $GITHUB_OUTPUT
+          echo "Tag $TAG already exists"
+        else
+          echo "exists=false" >> $GITHUB_OUTPUT
+          echo "Tag $TAG does not exist"
+        fi
+
+    - name: Configure Git
+      if: steps.check_tag.outputs.exists == 'false'
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+
+    - name: Create and Push Tag
+      if: steps.check_tag.outputs.exists == 'false'
+      run: |
+        TAG="v${{ steps.gitversion.outputs.semVer }}"
+        echo "Creating tag: $TAG"
+        git tag -a "$TAG" -m "Release version ${{ steps.gitversion.outputs.semVer }}"
+        git push origin "$TAG"
+        echo " Tag $TAG created and pushed successfully"
+
+    - name: Create Release Notes
+      if: steps.check_tag.outputs.exists == 'false'
+      id: release_notes
+      run: |
+        TAG="v${{ steps.gitversion.outputs.semVer }}"
+        echo "Generating release notes for $TAG"
+        
+        # Get commits since last tag
+        LAST_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+        if [ -z "$LAST_TAG" ]; then
+          COMMITS=$(git log --pretty=format:"- %s (%h)" --no-merges)
+        else
+          COMMITS=$(git log ${LAST_TAG}..HEAD --pretty=format:"- %s (%h)" --no-merges)
+        fi
+        
+        # Save to file for next step
+        cat > release_notes.md <<EOF
+        ## What's Changed
+        
+        $COMMITS
+        
+        **Full Changelog**: https://github.com/${{ github.repository }}/compare/${LAST_TAG}...${TAG}
+        EOF
+        
+        cat release_notes.md
+
+    - name: Create GitHub Release
+      if: steps.check_tag.outputs.exists == 'false'
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: v${{ steps.gitversion.outputs.semVer }}
+        name: Release v${{ steps.gitversion.outputs.semVer }}
+        body_path: release_notes.md
+        draft: false
+        prerelease: false
+        generate_release_notes: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Summary
+      if: steps.check_tag.outputs.exists == 'false'
+      run: |
+        echo "##  Release Created!" >> $GITHUB_STEP_SUMMARY
+        echo "" >> $GITHUB_STEP_SUMMARY
+        echo "**Version:** v${{ steps.gitversion.outputs.semVer }}" >> $GITHUB_STEP_SUMMARY
+        echo "**Tag:** v${{ steps.gitversion.outputs.semVer }}" >> $GITHUB_STEP_SUMMARY
+        echo "**Release:** https://github.com/${{ github.repository }}/releases/tag/v${{ steps.gitversion.outputs.semVer }}" >> $GITHUB_STEP_SUMMARY
