--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,13 @@ jobs:
         fetch-depth: 0  # Shallow clones should be disabled for better analysis
 
     - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v3.0.2
+      uses: gittools/actions/gitversion/setup@v4
       with:
-        versionSpec: '6.x'
+        versionSpec: '6.0'
 
     - name: Determine Version
       id: gitversion
-      uses: gittools/actions/gitversion/execute@v3.0.2
+      uses: gittools/actions/gitversion/execute@v4
       with:
         useConfigFile: true
         configFilePath: GitVersion.yml
