--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,12 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"name": "Launch and Debug Standalone Blazor WebAssembly App",
+			"type": "blazorwasm",
+			"request": "launch",
+			"cwd": "${workspaceFolder}/HexGrid.Demo",
+		},
+		{
 			"name": "C#: Test Debug",
 			"type": "dotnet",
 			"request": "launch",
