fix(ci): enable automatic major version bumps for breaking changes
- Change main branch increment from Patch to Inherit in GitVersion.yml
- This allows breaking change commits (feat!, refactor!, BREAKING CHANGE:) to trigger major version bumps
- Add detailed documentation explaining the critical importance of increment: Inherit
- Create BREAKING_CHANGE_VERSION_FIX.md documenting the root cause and solution

Fixes issue where refactor! commits were only bumping patch version instead of major version

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -22,7 +22,7 @@ commit-message-incrementing: Enabled
 branches:
   main:
     mode: ContinuousDelivery
-    increment: Patch
+    increment: Inherit
     is-release-branch: true
   
   develop:
