fix(ci): add fix/* branch configuration to GitVersion.yml
- Add configuration for fix/* branches to prevent 'No base versions determined' error
- Configure fix branches with ContinuousDeployment mode and Inherit increment
- Use branch name as label for fix branch versions

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -43,6 +43,14 @@ branches:
     label: '{BranchName}'
     increment: Inherit
 
+  fix:
+    mode: ContinuousDeployment
+    label: '{BranchName}'
+    increment: Inherit
+    regex: '^fix(es)?[/-]'
+    source-branches: ['develop', 'main', 'release', 'feature', 'support', 'hotfix']
+    track-merge-target: false
+
   pull-request:
     mode: ContinuousDeployment
     label: 'PullRequest'
