--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Shallow clones should be disabled for better analysis
+        ref: ${{ github.event.pull_request.head.ref || github.ref }}
 
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v4
@@ -52,6 +53,9 @@ jobs:
       with:
         configFilePath: GitVersion.yml
         updateAssemblyInfo: false
+        overrideConfig: |
+          update-build-number=false
+        targetPath: ${{ github.workspace }}
         
     - name: Set GitVersion Environment Variables
       run: |
