docs(versioning): add GitFlow versioning strategy documentation and update config
- Keep develop branch with increment: Minor for predictable alpha versioning
- Add fix/* to develop's is-source-branch-for list
- Add track-merge-target: false to all non-develop branches for clarity
- Create comprehensive GITFLOW_VERSIONING.md explaining version calculation flow
- Document why develop uses Minor increment instead of Inherit

The develop branch intentionally uses increment: Minor because:
1. Provides consistent pre-release versioning (alpha.1, alpha.2, etc.)
2. track-merge-target: true ensures main calculates correct version from feature commits
3. Main branch with increment: Inherit properly respects breaking changes

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -24,24 +24,27 @@ branches:
     mode: ContinuousDelivery
     increment: Inherit
     is-release-branch: true
+    track-merge-target: false
   
   develop:
     mode: ContinuousDeployment
     label: alpha
     increment: Minor
     track-merge-target: true
-    is-source-branch-for: ['release', 'feature']
+    is-source-branch-for: ['release', 'feature', 'fix']
 
   release:
     mode: ContinuousDelivery
     label: beta
     increment: None
     is-release-branch: true
+    track-merge-target: false
 
   feature:
     mode: ContinuousDeployment
     label: '{BranchName}'
     increment: Inherit
+    track-merge-target: false
 
   fix:
     mode: ContinuousDeployment
@@ -55,11 +58,13 @@ branches:
     mode: ContinuousDeployment
     label: 'PullRequest'
     increment: Inherit
+    track-merge-target: false
 
   hotfix:
     mode: ContinuousDeployment
     label: beta
     increment: Patch
+    track-merge-target: false
 
 ignore:
   sha: []
