--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         
     - uses: gittools/actions/gitversion/setup@v4
       with:
-        versionSpec: '6.x'
+        versionSpec: '5.12.0'
         
     - name: Determine Version
       id: version
@@ -55,7 +55,7 @@ jobs:
         
     - uses: gittools/actions/gitversion/setup@v4
       with:
-        versionSpec: '6.x'
+        versionSpec: '5.12.0'
         
     - name: Determine Version
       id: version
