fix(version): set initial version to 0.1.0 and use rc tag for main branch
- Changed next-version from 1.0.0 to 0.1.0 to start at minor version
- Updated main branch to use 'rc' tag instead of empty tag for release candidates
- This ensures proper semantic versioning starting from 0.1.x

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -1,5 +1,5 @@
-﻿mode: ContinuousDeployment
-next-version: 1.0.0
+mode: ContinuousDeployment
+next-version: 0.1.0
 tag-prefix: '[vV]'
 commit-message-incrementing: Enabled
 
@@ -7,7 +7,7 @@ branches:
   main:
     regex: ^main$
     mode: ContinuousDeployment
-    tag: ''
+    tag: 'rc'
     increment: Inherit
     track-merge-target: true
     
