refactor!: rename HexGrid.Lib to HexGrid and reorganize project structure
BREAKING CHANGE: Project folder renamed from HexGrid.Lib to HexGrid. Namespace structure updated from HexGrid.Lib.* to HexGrid.* to prepare for SquirrelWorks namespace prefix. All project references and using statements updated accordingly.

Changes:
- Renamed HexGrid.Lib folder to HexGrid (removes .Lib suffix)
- Updated all namespace declarations across library, tests, and demo
- Updated project references in solution and csproj files
- Updated Blazor imports and component references
- Removed temporary testing and reset scripts

Migration: Update using statements from 'using HexGrid.Lib.*' to 'using HexGrid.*'

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -27,9 +27,9 @@
 
   <!-- Package Metadata -->
   <PropertyGroup>
-    <Authors>SquirrelWorksIO</Authors>
+    <Authors>MacSquizzy</Authors>
     <Company>SquirrelWorks</Company>
-    <Product>HexGrid</Product>
+    <Product>SquirrelWorks.HexGrid</Product>
     <Copyright>Copyright © $([System.DateTime]::Now.Year) SquirrelWorks</Copyright>
     <PackageProjectUrl>https://github.com/SquirrelWorksIO/HexGrid</PackageProjectUrl>
     <RepositoryUrl>https://github.com/SquirrelWorksIO/HexGrid.git</RepositoryUrl>
