--- a/HexGrid.Tests/HexGrid.Tests.csproj
+++ b/HexGrid.Tests/HexGrid.Tests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HexGrid.Lib\HexGrid.Lib.csproj" />
+    <ProjectReference Include="..\HexGrid\HexGrid.csproj" />
   </ItemGroup>
 
 </Project>
